--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -488,7 +488,7 @@
             </div>
         </section>
 
-        <section class="dark-wrapper opaqued parallax" data-parallax="scroll" data-image-src="assets/img/bg/bg6.jpg" data-speed="0.7">
+        <section class="dark-wrapper opaqued parallax" data-parallax="scroll" data-image-src="assets/img/bg/bg6.jpg" data-speed="0.7" style= "background-color: rgba(0, 0, 255, 0.2) ;">
             <div class="section-inner">
                 <div class="container">
                     <div class="row">
@@ -531,7 +531,7 @@
                     <div class="row">
                         <div class="col-md-6 mb100 wow">
                             <h2 class="section-heading">Notre dernière sortie</h2>
-                            <h3 class="section-subheading secondary-font">Les enfants se sont régalés</h3>
+                            <h3 class="section-subheading secondary-font">"Connaissance de l'autre"</h3>
                         </div>
                         <div class="col-md-6 text-right">
                             <ul class="portfolio-filter mb30 list-inline wow">
@@ -539,7 +539,7 @@
                                 <li><a class="btn btn-primary" href="#" data-filter=".apps">Nos circuits culturels</a></li>
                                 <li><a class="btn btn-primary" href="#" data-filter=".design">Nos circuits sportifs</a></li>
                                 <li><a class="btn btn-primary" href="#" data-filter=".photography">Nos circuits B2B</a></li>
-                                <li><a class="btn btn-primary" href="#" data-filter=".video">Galérie</a></li>
+                                <li><a class="btn btn-primary" href="#" data-filter=".video">Galerie</a></li>
                             </ul>
                         </div>
                     </div>
@@ -553,7 +553,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Atelier Connaissance/ Icebreaker</a></h3>
                                             <a href="assets/img/portfolio/portfolio1.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -566,7 +566,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Atelier Orientation</a></h3>
                                             <a href="assets/img/portfolio/portfolio2.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -579,7 +579,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Pause Fraîcheur</a></h3>
                                             <a href="assets/img/portfolio/portfolio3.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -592,7 +592,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Jeux sportifs</a></h3>
                                             <a href="assets/img/portfolio/portfolio4.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -605,7 +605,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Election Miss</a></h3>
                                             <a href="assets/img/portfolio/portfolio5.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -618,7 +618,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Spectacle artistique</a></h3>
                                             <a href="assets/img/portfolio/portfolio6.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -632,7 +632,7 @@
                                         <div class="overlay-item-caption smoothie"></div>
                                         <div class="hover-item-caption smoothie">
                                             <div class="vertical-center smoothie">
-                                                <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                                <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">...</a></h3>
                                                 <a href="assets/img/portfolio/portfolio7.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                                 <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                             </div>
@@ -646,7 +646,7 @@
                                     <div class="overlay-item-caption smoothie"></div>
                                     <div class="hover-item-caption smoothie">
                                         <div class="vertical-center smoothie">
-                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">Fullscreen Gallery</a></h3>
+                                            <h3 class="smoothie mb30"><a href="single-portfolio-fullscreen.html" title="view project">...</a></h3>
                                             <a href="assets/img/portfolio/portfolio8.jpg" title="View Gallery" class="btn btn-primary lb-link smoothie">Zoom</a>
                                             <a href="single-portfolio-fullscreen.html" class="smoothie btn btn-primary">View</a>
                                         </div>
@@ -672,7 +672,7 @@
                 </div>
         </section>
 
-        <section class="dark-wrapper opaqued parallax" data-parallax="scroll" data-image-src="assets/img/bg/bg6.jpg" data-speed="0.7">
+        <section class="dark-wrapper opaqued parallax" data-parallax="scroll" data-image-src="assets/img/bg/bg61.jpg" data-speed="0.7" style="background-color: rgba(0, 0, 255, 0.1);">
             <div id="contact-tabs" role="tabpanel">
 
                 <!-- Nav tabs -->
@@ -699,11 +699,11 @@
                                         <div class="col-sm-8 col-sm-offset-2">
                                             <div id="message"></div>
                                             <form method="post" action="sendemail.php" id="contactform" class="main-contact-form wow">
-                                                <input type="text" class="form-control col-md-4" name="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name." />
-                                                <input type="text" class="form-control col-md-4" name="email" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address." />
-                                                <input type="text" class="form-control col-md-4" name="website" placeholder="Your URL *" id="website" required data-validation-required-message="Please enter your web address." />
-                                                <textarea name="comments" class="form-control" id="comments" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
-                                                <input class="btn btn-primary mt30 btn-white pull-right" type="submit" name="submit" value="Submit" />
+                                                <input type="text" class="form-control col-md-4" name="name" placeholder="Votre nom *" id="name" required data-validation-required-message="Please enter your name." />
+                                                <input type="text" class="form-control col-md-4" name="email" placeholder="Votre email *" id="email" required data-validation-required-message="Please enter your email address." />
+                                                <!-- <input type="text" class="form-control col-md-4" name="website" placeholder="Your URL *" id="website" required data-validation-required-message="Please enter your web address." /> -->
+                                                <textarea name="comments" class="form-control" id="comments" placeholder="Votre message *" required data-validation-required-message="Please enter a message."></textarea>
+                                                <input class="btn btn-primary mt30 btn-white pull-right" type="submit" name="submit" value="Envoyez" />
                                             </form>
                                         </div>
                                     </div>
@@ -727,13 +727,13 @@
                         <div class="col-sm-8 col-sm-offset-2">
                             <ul class="owl-carousel-paged testimonial-owl wow fadeIn list-unstyled" data-items="4" data-items-desktop="[1200,4]" data-items-desktop-small="[980,4]" data-items-tablet="[768,3]" data-items-mobile="[479,2]">
                                 <li>
-                                    <img src="assets/img/logo/logo1.png" class="img-responsive" alt="">
+                                    <img src="assets/img/logo/logo1.jpg" class="img-responsive" alt="">
                                 </li>
                                 <li>
                                     <img src="assets/img/logo/logo2.png" class="img-responsive" alt="">
                                 </li>
                                 <li>
-                                    <img src="assets/img/logo/logo3.png" class="img-responsive" alt="">
+                                    <img src="assets/img/logo/logo3.jpg" class="img-responsive" alt="">
                                 </li>
                                 <li>
                                     <img src="assets/img/logo/logo4.png" class="img-responsive" alt="">
@@ -742,7 +742,7 @@
                                     <img src="assets/img/logo/logo5.png" class="img-responsive" alt="">
                                 </li>
                                 <li>
-                                    <img src="assets/img/logo/logo6.png" class="img-responsive" alt="">
+                                    <img src="assets/img/logo/logo6.jpg" class="img-responsive" alt="">
                                 </li>
                             </ul>
                         </div>
@@ -759,7 +759,7 @@
                             <div class="col-md-4">
                                 <div class="widget about-us-widget">
                                     <h4 class="widget-title"><strong>Explo</strong>Run</h4>
-                                    <p>Professionally monetize team building materials for 24/7 results. Holisticly transition corporate platforms vis-a-vis cutting-edge experiences. Dynamically strategize ubiquitous applications for premier initiatives. Interactively seize resource sucking niche markets.</p>
+                                    <p>Basée à la Réunion depuis 2021, cette start up redynamise la Réunion et crée un nouveau souffle sportif et ludique pour les adultes comme pour les enfants ainsi que les entreprises.</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -816,21 +816,21 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <ul class="list-inline social-links wow">
-                                <li>
+                                <!-- <li>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
-                                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                                    <a href="#"><i class="fa fa-instagram"></i></a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#"><i class="fa fa-dribbble"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#"><i class="fa fa-behance"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="#"><i class="fa fa-linkedin"></i></a>
                                 </li>
