--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -46,21 +46,21 @@
                 <div class="container">
                     <div class="clearfix">
                         <ul class="list-inline social-links wow pull-left">
-                            <li>
+                           <!--  <li>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
+                            </li> -->
                             <li>
-                                <a href="#"><i class="fa fa-pinterest"></i></a>
+                                <a href="#"><i class="fa fa-instagram"></i></a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#"><i class="fa fa-dribbble"></i></a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#"><i class="fa fa-behance"></i></a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
@@ -297,15 +297,21 @@
         </div>
 
         <!-- Header -->
+
         <header id="headerwrap" class="backstretched fullheight agency-slider backstretch-overlay-alt">
-            <div class="container vertical-center">
-                <div class="intro-text vertical-center text-left smoothie">
-                    <video autoplay muted loop id="myVideo">
+            
+            <div class="container-fluid vertical-center maclasse">
+                <div class="intro-text vertical-center text-left smoothie"> 
+                    <div class="sectionvideo">
+                      <video autoplay muted loop id="myVideo">
                     <source src="assets/img/agency/vidéo-réunion.mp4" type="video/mp4">
                     </video>
+                       <div class="content">       
                     <div class="intro-heading wow fadeIn heading-font" data-wow-delay="0.2s">ExploRun</div>
                     <div class="intro-sub-heading wow fadeIn secondary-font" data-wow-delay="0.4s">Vous souhaitez découvrir la Réunion autrement ? Découvrez nos circuits <span class="rotate">divertissants, personnalisés, sportifs</span></div>
                     <a href="#welcome" class="btn btn-primary btn-white mt30 page-scroll" data-wow-delay="0.6s">En savoir plus</a>
+                </div>
+                    </div>     
                 </div>
             </div>
         </header>
@@ -499,7 +505,7 @@
                                 <i class="fa-4x pe-7s-camera"></i>
                                 <div class="content-area">
                                     <h3 class="title">Nos circuits pour les enfants</h3>
-                                    <div class="content">De la Reine des Neiges à Dragons, il y en a pour tous les goûts pour faire rêver vos petite princesses et vos petits Spiderman</div>
+                                    <div class="content"> De la Reine des Neiges à Dragons, il y en a pour tous les goûts pour faire rêver vos petite princesses et vos petits Spiderman </div>
                                 </div>
                             </div>
                         </div>
