--- a/Kompleet/index.html
+++ b/Kompleet/index.html
@@ -89,7 +89,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand smoothie logo logo-light" href="index.html"><img src="assets/img/logo.png" alt="logo" width="200px" style="max-height:inherit"></a>
-                    <a class="navbar-brand smoothie logo logo-dark" href="index.html"><img src="assets/img/logo_reverse.png" alt="logo"></a> 
+                    <!-- <a class="navbar-brand smoothie logo logo-dark" href="index.html"><img src="assets/img/logo_reverse.png" alt="logo"></a> --> 
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -169,7 +169,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Crée ton futur circuit <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Crée ton futur circuit <!-- <span class="pe-7s-angle-down"></span> --></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages - About Us</a> -->
@@ -196,7 +196,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Plan d'accès <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Plan d'accès <!-- <span class="pe-7s-angle-down"></span> --></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio - Full Grid</a> -->
@@ -244,7 +244,7 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <!-- <span class="pe-7s-angle-down"></span> --></a>
                             <ul class="dropdown-menu">
                                 <li class="dropdown-submenu">
                                     <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog Feeds</a> -->
@@ -271,10 +271,10 @@
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Contact <span class="pe-7s-angle-down"></span></a>
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown">Contact <!-- <span class="pe-7s-angle-down"></span> --></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="index-shop.html">Home Shop</a></li>
-                                <li><a href="single-product.html">Single Product</a></li>
+                                <!-- <li><a href="index-shop.html">Home Shop</a></li> -->
+                                <!-- <li><a href="single-product.html">Single Product</a></li> -->
                             </ul>
                         </li>
                         <li><a href="#search"><i class="pe-7s-search"></i></a></li>
@@ -303,7 +303,7 @@
             <div class="container-fluid vertical-center maclasse">
                 <div class="intro-text vertical-center text-left smoothie"> 
                     <div class="sectionvideo">
-                      <video autoplay muted loop id="myVideo">
+                      <video autoplay muted loop id="myVideo" style="z-index: 9;">
                     <source src="assets/img/agency/vidéo-réunion.mp4" type="video/mp4">
                     </video>
                        <div class="content">       
@@ -333,7 +333,7 @@
                         <div class="col-md-6">
                             <p class="lead">Vous êtes une entreprise et vous recherchez un séminaire original et divertissant pour vos employés ? </p>
                             <p>Découvrez nos circuits adaptés pour les entreprises de petites, moyennes et grandes tailles</p>
-                            <p class="mt30"><a href="#contact" class="btn btn-primary btn-theme page-scroll">Je souhaite avoir un devis personnalisé</a></p>
+                            <p class="mt30"><a href="contact-us-1.html" class="btn btn-primary btn-theme page-scroll">Je souhaite avoir un devis personnalisé</a></p>
                         </div>
 
                         <div class="col-md-6">
@@ -505,7 +505,7 @@
                                 <i class="fa-4x pe-7s-camera"></i>
                                 <div class="content-area">
                                     <h3 class="title">Nos circuits pour les enfants</h3>
-                                    <div class="content"> De la Reine des Neiges à Dragons, il y en a pour tous les goûts pour faire rêver vos petite princesses et vos petits Spiderman </div>
+                                    <div class="content">De la Reine des Neiges à Dragons, il y en a pour tous les goûts pour faire rêver vos petite princesses et vos petits Spiderman</div>
                                 </div>
                             </div>
                         </div>
